--- a/edTech.APIs/appsettings.json
+++ b/edTech.APIs/appsettings.json
@@ -16,7 +16,7 @@
     "Audience": "edtechui.com"
   },
   "ConnectionStrings": {
-    "DbConnection": "data source=Shailendra\\SqlExpress; initial catalog=edtech10AM;persist security info=True;user id=sa;password=dotnettricks;"
+    "DbConnection": "data source=Shailendra\\SqlExpress; initial catalog=edtech;persist security info=True;user id=sa;password=dotnettricks;"
   },
   "AllowedHosts": "*"
 }
